#+title: corfu.el - Changelog
#+author: Daniel Mendler
#+language: en

* Development

- Require Emacs 28.1.
- Use fringe to display scroll bar. Make sure that the scroll bar cannot be
  pushed outside the child frame by the content. This affects for example
  ~cape-emoji~.
- Improve suffix alignment.

* Version 1.5 (2024-07-26)

- New customization variable =global-corfu-minibuffer= to enable Corfu in the
  minibuffer.
- Unbind =C-a= in =corfu-map=. This binding is only needed in modes which override
  =C-a= instead of remapping ~move-beginning-of-line~.
- Unbind =<tab>= in ~corfu-map~. This binding is only needed in modes which bind
  =<tab>= instead of =TAB=, as was the case in old versions of Org. If you use such
  a mode, please report this as a bug for this mode. In the meantime you can use
  =(keymap-set corfu-map "<tab>" #'corfu-complete)=.
- Add new command ~corfu-send~ as alternative to ~corfu-insert~.
- =corfu-popupinfo=: Support both =face= and =font-lock-face= highlighting.
- Bump Compat dependency to Compat 30.

* Version 1.4 (2024-05-23)

- ~corfu-auto-commands~: Add ~delete-backward-char~.

* Version 1.3 (2024-04-05)

- Preserve currently selected candidate on further input. This matters if
  candidate preview is disabled (~corfu-preview-current=nil~).
- Add new command ~corfu-expand~ bound to ~M-TAB~ by default. The command expands
  the input via ~completion-try-completion~, for example the ~basic~ completion
  style expands the common prefix of all candidates.

* Version 1.2 (2024-01-23)

- Support the EXWM window manager.
- Optimization: Reduce auto completion timer overhead.
- Use ~internal-border-width~ instead of ~child-frame-border-width~.
- Internal refactoring: Do not use buffer-local variables.
- Internal refactoring: Store ~completion-extra-properties~ as part of
  ~completion-in-region--data~.

* Version 1.1 (2023-12-27)

- Deduplicate candidates with respect to ~equal-including-properties~, such that